[gd_scene load_steps=14 format=3 uid="uid://csgdtb8pbgwjj"]

[ext_resource type="PackedScene" uid="uid://bx4f447gbcnko" path="res://texture/shieldgen2.fbx" id="1_c48y0"]
[ext_resource type="Script" path="res://src/shield.gd" id="2_27f83"]
[ext_resource type="Shader" path="res://bubbleshield01.gdshader" id="2_ipuh3"]
[ext_resource type="Shader" path="res://outline01.gdshader" id="3_u1ogl"]
[ext_resource type="AudioStream" uid="uid://d210wmjbixl28" path="res://audio/shield-boot.wav" id="3_us5ol"]
[ext_resource type="AudioStream" uid="uid://b71qph3huh4ic" path="res://audio/shield-sustain.mp3" id="4_jbxk1"]
[ext_resource type="AudioStream" uid="uid://e55al1ajores" path="res://audio/shield-powerdown.wav" id="5_fyjak"]
[ext_resource type="Script" path="res://src/shield_battery_label.gd" id="8_k1323"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cbqmf"]
render_priority = 0
shader = ExtResource("3_u1ogl")
shader_parameter/border_width = null
shader_parameter/color = Vector4(0, 0.5, 1.5, 1)
shader_parameter/pattern = null
shader_parameter/line_number = null
shader_parameter/line_sharpness = null
shader_parameter/pulse = null
shader_parameter/pulse_speed = null
shader_parameter/line_movement = null
shader_parameter/line_movement_speed = null
shader_parameter/wave = null

[sub_resource type="SphereShape3D" id="SphereShape3D_6es2b"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_og3ex"]
render_priority = 0
shader = ExtResource("2_ipuh3")
shader_parameter/base_color = Color(0, 0.5, 1, 1)
shader_parameter/pulse_color = Color(0.5, 0.7, 1, 1)
shader_parameter/speed = 1.0
shader_parameter/scale = 1.0
shader_parameter/distortion = 2.0
shader_parameter/shield_power = 0.2
shader_parameter/rim_power = 1.5
shader_parameter/pulse_frequency = 0.75

[sub_resource type="SphereMesh" id="SphereMesh_uxvvl"]
material = SubResource("ShaderMaterial_og3ex")
radius = 6.0
height = 12.0

[sub_resource type="FogMaterial" id="FogMaterial_64duk"]
density = -8.0
edge_fade = 0.00625002

[node name="Shield" instance=ExtResource("1_c48y0")]
transform = Transform3D(12, 0, 0, 0, -5.24537e-07, -12, 0, 12, -5.24537e-07, 0, 0, 0)

[node name="Mesh0" parent="." index="0" groups=["bubble_shield", "interactable"]]
transform = Transform3D(1, 0, 0, 0, 1, 7.54979e-08, 0, -7.54979e-08, 1, 0, 0, 0)
collision_layer = 2
script = ExtResource("2_27f83")
starting_energy = 10

[node name="Mesh0" parent="Mesh0" index="0"]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, 0)
material_overlay = SubResource("ShaderMaterial_cbqmf")

[node name="CollisionShape3D" parent="Mesh0" index="1"]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, 0)

[node name="BubbleShield" type="Area3D" parent="Mesh0" index="2"]
transform = Transform3D(4, 0, 0, 0, -0.107918, 3.99854, 0, -3.99854, -0.107918, -0.00490491, 0.000545263, 0.0015772)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Mesh0/BubbleShield" index="0"]
transform = Transform3D(12, 0, 0, 0, 12, 0, 0, 0, 12, 0, 0, 0)
shape = SubResource("SphereShape3D_6es2b")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Mesh0/BubbleShield" index="1"]
mesh = SubResource("SphereMesh_uxvvl")

[node name="FogVolume" type="FogVolume" parent="Mesh0/BubbleShield" index="2"]
size = Vector3(10, 10, 10)
shape = 0
material = SubResource("FogMaterial_64duk")

[node name="ShieldActivateAudio" type="AudioStreamPlayer3D" parent="Mesh0" index="3"]
transform = Transform3D(0.0833333, 0, 0, 0, -0.0022483, 0.083303, 0, -0.083303, -0.0022483, -0.00489555, -0.000858848, 0.00157718)
stream = ExtResource("3_us5ol")

[node name="ShieldHumAudio" type="AudioStreamPlayer3D" parent="Mesh0" index="4"]
transform = Transform3D(0.0833333, 0, 0, 0, -0.0022483, 0.083303, 0, -0.083303, -0.0022483, -0.00489555, -0.000858848, 0.00157718)
stream = ExtResource("4_jbxk1")
volume_db = -20.0
pitch_scale = 0.9
parameters/looping = false

[node name="ShieldDeactivateAudio" type="AudioStreamPlayer3D" parent="Mesh0" index="5"]
transform = Transform3D(0.0833333, 0, 0, 0, -0.0022483, 0.083303, 0, -0.083303, -0.0022483, -0.00489555, -0.000858848, 0.00157718)
stream = ExtResource("5_fyjak")

[node name="OmniLight3D" type="OmniLight3D" parent="Mesh0" index="6"]
transform = Transform3D(1, 0, 0, 0, -0.0269796, 0.999636, 0, -0.999636, -0.0269796, -0.00490491, -0.0093839, -0.0942185)
light_color = Color(0.247059, 0.67451, 0.87451, 1)
light_energy = 0.5

[node name="EnergyLabel" type="Label3D" parent="Mesh0" index="7"]
transform = Transform3D(0.568005, 0, 0, 0, 0.0288253, 1.01511, 0, -0.640702, 0.0456699, -0.00625966, 3.45969e-09, -0.108841)
render_priority = 2
outline_render_priority = 1
text = "100%"
script = ExtResource("8_k1323")
